# django-static-redirects

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
static_redirect/: __init__.py  middleware.py
static_redirects/: __init__.py  apps.py  checks.py  middleware.py  signal_handlers.py  utils.py
tests/: settings.py  tests.py
tests/redirects/: redirects.csv  redirects.json
