[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-static-redirect"
description = "Static redirects for Django"
authors = [{name = "Jake Howard"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]

dependencies = [
    "Django>=3.2"
]

[tool.flit.module]
name = "static_redirect"
