[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-static-redirects"
description = "Static redirects for Django"
authors = [{name = "Jake Howard"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "Django>=3.2"
]

[project.urls]
Source = "https://github.com/RealOrangeOne/django-static-redirects"
Issues = "https://github.com/RealOrangeOne/django-static-redirects/issues"
Changelog = "https://github.com/RealOrangeOne/django-static-redirects/releases"

[tool.flit.module]
name = "static_redirects"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "A", "C4"]
ignore = ["E501"]
